# codex_auth_manager

./: .dockerignore  .gitignore  AGENT.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  index.html  nx.json  package-lock.json  package.json
.github/workflows/: release.yml
admin-ui/: admin.html  tsconfig.json
admin-ui/src/: AdminConsole.tsx  App.tsx  constants.ts  main.tsx  styles.css
admin-ui/src/components/: LoginView.tsx
admin-ui/src/hooks/: useAuthenticatedApi.ts  useThemeMode.ts
admin-ui/src/pages/: ApprovalsPage.tsx  AuditLogsPage.tsx  InvitationsPage.tsx  UsersPage.tsx
admin-ui/src/utils/: format.ts  storage.ts
apps/admin/: .env.example  Dockerfile  README.md  docker-compose.yml  project.json  tsconfig.json
apps/admin-ui/: package.json  project.json  vite.config.ts
apps/admin-ui/src/: AdminConsole.tsx  App.tsx  constants.ts  i18n-context.tsx  i18n.ts  styles.css  types.ts
apps/admin/__test__/: admin.service.spec.ts  announcement.service.spec.ts  auth-secrets.spec.ts  authorization.spec.ts  config.module.spec.ts  controllers.spec.ts  dto-validation.spec.ts  email-verification.service.spec.ts  fixtures.ts  official-account-import.service.spec.ts  rbac.service.spec.ts  sync.service.spec.ts  telemetry.service.spec.ts
apps/admin/kong/: existing-kong.example.yml
apps/admin/public/: admin.html
apps/admin/sql/: 20260707-sync-providers.sql  20260714-system-account-pool.sql  20260717-device-installations.sql  20260718-announcement-scroll-speed.sql  20260718-device-installation-app-version.sql  20260718-dynamic-rbac.sql  20260720-sync-account-field-modified-at.sql  20260722-sync-account-soft-delete.sql  20260724-app-notifications.sql
apps/admin/src/: app.module.ts  main.ts
apps/backend/: Dockerfile  package.json  project.json  tsconfig.test.json  vitest.config.ts
apps/backend/kong/: existing-kong.example.yml
apps/backend/public/: admin.html
apps/backend/src/: main.ts
apps/desktop/: index.html  package.json  project.json  vite.config.ts
apps/desktop/public/: login.html
apps/desktop/src/: App.tsx  demo.ts  i18n.ts  main.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/dream-skin/: NOTICE.md
apps/desktop/src-tauri/resources/dream-skin/assets/windows/: dream-skin.css  renderer-inject.js
apps/desktop/src-tauri/resources/dream-skin/presets/preset-aqua-resonance/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-coral-horizon/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-cosmic-violet/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-fortune-at-work/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-gothic-void-crusade/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-midnight-gold/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-rose-reverie/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-sage-daylight/: theme.json
apps/desktop/src-tauri/resources/dream-skin/presets/preset-spark-studio/: theme.json
apps/desktop/src-tauri/src/: account_archive.rs  agent_identity.rs  agent_identity_plugins.rs  auth.rs  cloud.rs  codex_api.rs  commands.rs  dream_skin.rs  dream_skin_native.rs  floating_bubble.rs  lib.rs  local_proxy.rs  main.rs  models.rs  oauth.rs  providers.rs  remote_control.rs  storage.rs  system_proxy.rs  system_tray.rs  update.rs
apps/native/: App.tsx  README.md  app.json  package.json
backend/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
backend/__test__/: admin.service.spec.ts  auth.service.spec.ts  controllers.spec.ts  dto-validation.spec.ts  user.service.spec.ts
backend/kong/: existing-kong.example.yml
backend/public/: admin.html
backend/sql/: 20260704-admin-management.sql
docs/: architecture.md  development.md  ghost-homepage.md
scripts/: tag-release.mjs
src/: App.tsx  demo.ts  i18n.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: cloud.rs  commands.rs  floating_bubble.rs  lib.rs  main.rs  models.rs  oauth.rs  system_tray.rs
src/api/: backend.ts
src/components/: FloatingUsageBubble.tsx
src/hooks/: useAccountManager.ts  useAutoRefresh.ts  useCloudAuth.ts  useLanguage.ts  useResetCredits.ts  useThemeColor.ts
src/pages/: AccountsPage.tsx  SettingsPage.tsx
src/utils/: format.ts
(+185 files in other folders)
