[package]
name = "codex-switch"
version = "0.1.0"
description = "Local multi-account manager for Codex auth.json"
authors = ["Codex Switch"]
license = "Apache-2.0"
edition = "2021"

[lib]
name = "codex_switch_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
aes-gcm = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
flate2 = "1"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
semver = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tiny_http = "0.12"
url = "2"
zip = { version = "2", default-features = false }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem"] }
